# shortcut-comparison

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  bench.py  benchmark.bash  build.py  do_csv_bench.bash  plot.bash  plot_cpu_architecture.sh  plot_reports.py  r  test.py
cpp/: CMakeLists.txt  README.md  main.cpp
cpp/common/: benchmark.cpp  step.hpp
cpp/v0_baseline/: CMakeLists.txt  main.cpp  step.cpp
cpp/v1_linear_reading/: step.cpp
docs/: f32_min_method.md  intro.md  v0.md
reports/Xeon-E3-1230-v5/multi-thread/clang/: v0_baseline.txt  v1_linear_reading.txt  v2_instr_level_parallelism.txt  v3_simd.txt  v4_register_reuse.txt  v5_more_register_reuse.txt  v6_prefetch.txt  v7_cache_reuse.txt
reports/Xeon-E3-1230-v5/multi-thread/gcc/: v0_baseline.txt  v1_linear_reading.txt  v2_instr_level_parallelism.txt  v3_simd.txt  v4_register_reuse.txt  v5_more_register_reuse.txt  v6_prefetch.txt  v7_cache_reuse.txt
reports/Xeon-E3-1230-v5/multi-thread/rustc/: v0_baseline.txt  v1_linear_reading.txt  v2_instr_level_parallelism.txt  v3_simd.txt  v4_register_reuse.txt  v5_more_register_reuse.txt  v6_prefetch.txt  v7_cache_reuse.txt
reports/Xeon-E3-1230-v5/single-thread/clang/: v0_baseline.txt  v1_linear_reading.txt  v2_instr_level_parallelism.txt  v3_simd.txt  v4_register_reuse.txt  v5_more_register_reuse.txt  v6_prefetch.txt  v7_cache_reuse.txt
reports/Xeon-E3-1230-v5/single-thread/gcc/: v0_baseline.txt  v1_linear_reading.txt  v2_instr_level_parallelism.txt  v3_simd.txt  v4_register_reuse.txt  v5_more_register_reuse.txt  v6_prefetch.txt  v7_cache_reuse.txt
reports/Xeon-E3-1230-v5/single-thread/rustc/: v0_baseline.txt  v1_linear_reading.txt  v2_instr_level_parallelism.txt  v3_simd.txt  v4_register_reuse.txt  v5_more_register_reuse.txt  v6_prefetch.txt  v7_cache_reuse.txt
reports/Xeon_E3-1230_v5/multi_core/cpp/: v0.csv  v1.csv  v2.csv  v3.csv  v4.csv  v5.csv  v6.csv  v7.csv
reports/Xeon_E3-1230_v5/multi_core/rust/: v0.csv  v1.csv  v2.csv  v3.csv  v4.csv  v5.csv  v6.csv  v7.csv
reports/Xeon_E3-1230_v5/single_core/cpp/: v0.csv  v1.csv  v2.csv  v3.csv  v4.csv  v5.csv  v6.csv  v7.csv
reports/Xeon_E3-1230_v5/single_core/rust/: v0.csv  v1.csv  v2.csv  v3.csv  v4.csv  v5.csv  v6.csv  v7.csv
reports/i5-4690k/multi-thread/clang/: v0_baseline.txt  v1_linear_reading.txt  v2_instr_level_parallelism.txt  v3_simd.txt  v4_register_reuse.txt  v5_more_register_reuse.txt  v6_prefetch.txt  v7_cache_reuse.txt
reports/i5-4690k/multi-thread/gcc/: v0_baseline.txt  v1_linear_reading.txt  v2_instr_level_parallelism.txt  v3_simd.txt  v4_register_reuse.txt  v5_more_register_reuse.txt  v6_prefetch.txt  v7_cache_reuse.txt
reports/i5-4690k/multi-thread/rustc/: v0_baseline.txt  v1_linear_reading.txt  v2_instr_level_parallelism.txt  v3_simd.txt  v4_register_reuse.txt  v5_more_register_reuse.txt  v6_prefetch.txt  v7_cache_reuse.txt
reports/i5-4690k/single-thread/clang/: v0_baseline.txt  v1_linear_reading.txt  v2_instr_level_parallelism.txt  v3_simd.txt  v4_register_reuse.txt  v5_more_register_reuse.txt  v6_prefetch.txt  v7_cache_reuse.txt
reports/i5-4690k/single-thread/gcc/: v0_baseline.txt  v1_linear_reading.txt  v2_instr_level_parallelism.txt  v3_simd.txt  v4_register_reuse.txt  v5_more_register_reuse.txt  v6_prefetch.txt  v7_cache_reuse.txt
reports/i5-4690k/single-thread/rustc/: v0_baseline.txt  v1_linear_reading.txt  v2_instr_level_parallelism.txt  v3_simd.txt  v4_register_reuse.txt  v5_more_register_reuse.txt  v6_prefetch.txt  v7_cache_reuse.txt
reports/i5-8250U/multi-thread/clang/: v0_baseline.txt  v1_linear_reading.txt  v2_instr_level_parallelism.txt  v3_simd.txt  v4_register_reuse.txt  v5_more_register_reuse.txt  v6_prefetch.txt  v7_cache_reuse.txt
reports/i5-8250U/multi-thread/gcc/: v0_baseline.txt  v1_linear_reading.txt  v2_instr_level_parallelism.txt  v3_simd.txt  v4_register_reuse.txt  v5_more_register_reuse.txt  v6_prefetch.txt  v7_cache_reuse.txt
reports/i5-8250U/multi-thread/rustc/: v0_baseline.txt  v1_linear_reading.txt  v2_instr_level_parallelism.txt  v3_simd.txt  v4_register_reuse.txt  v5_more_register_reuse.txt  v6_prefetch.txt  v7_cache_reuse.txt
reports/i5-8250U/single-thread/clang/: v0_baseline.txt  v1_linear_reading.txt  v2_instr_level_parallelism.txt  v3_simd.txt  v4_register_reuse.txt  v5_more_register_reuse.txt  v6_prefetch.txt  v7_cache_reuse.txt
reports/i5-8250U/single-thread/gcc/: v0_baseline.txt  v1_linear_reading.txt  v2_instr_level_parallelism.txt  v3_simd.txt  v4_register_reuse.txt  v5_more_register_reuse.txt  v6_prefetch.txt  v7_cache_reuse.txt
reports/i5-8250U/single-thread/rustc/: v0_baseline.txt  (+7 more)
rust/: Cargo.toml  README.md
rust/src/: main.rs
rust/v0_baseline/src/: main.rs  step.rs
src/: CMakeLists.txt  step_implementations.txt
src/common/: step.hpp  step_reference.cpp
src/cpp/: README.md
src/cpp/tools/: simd.hpp
src/cpp/v0_baseline/: step.cpp
src/cpp/v1_linear_reading/: step.cpp
src/cpp/v2_instr_level_parallelism/: step.cpp
src/cpp/v3_simd/: step.cpp
src/cpp/v4_register_reuse/: step.cpp
src/cpp/v5_more_register_reuse/: step.cpp
src/cpp/v6_prefetch/: step.cpp
src/cpp/v7_cache_reuse/: step.cpp
src/main/: main.cpp  step.hpp  step_reference.cpp  step_reference.hpp
src/rust/: README.md
src/rust/tools/: Cargo.toml  stopwatch.rs
src/rust/tools/src/: lib.rs  simd.rs  timer.rs
src/rust/v0_baseline/: Cargo.toml
src/rust/v0_baseline/src/: lib.rs
src/rust/v1_linear_reading/: Cargo.toml
src/rust/v1_linear_reading/src/: bad_loop.rs  lib.rs  not_terrible_loop.rs
src/rust/v2_instr_level_parallelism/: Cargo.toml
src/rust/v2_instr_level_parallelism/src/: lib.rs  no_autovec.rs
src/rust/v3_simd/: Cargo.toml
src/rust/v3_simd/src/: lib.rs
src/rust/v4_register_reuse/: Cargo.toml
src/rust/v4_register_reuse/src/: lib.rs
src/rust/v5_more_register_reuse/: Cargo.toml
src/rust/v5_more_register_reuse/src/: lib.rs
src/rust/v6_prefetch/: Cargo.toml
src/rust/v6_prefetch/src/: lib.rs  spilling.rs
src/rust/v7_cache_reuse/: Cargo.toml
src/rust/v7_cache_reuse/src/: lib.rs
weirdness/: f32_min_method.md
