[package]
name = "v2_instr_level_parallelism"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
rayon = "1.*"

[lib]
name = "v2_instr_level_parallelism"
crate-type = ["staticlib"]

[profile.release]
debug = false
debug-assertions = false
incremental = false
lto = false
opt-level = 3
overflow-checks = false
target-cpu = "native"
