[package]
name = "v3_simd"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
rayon = "1.*"
tools = { path = "../tools" }

[lib]
name = "v3_simd"
crate-type = ["staticlib"]

[profile.release]
debug = false
debug-assertions = false
incremental = false
lto = false
opt-level = 3
overflow-checks = false
target-cpu = "native"
